Membuat layout dan style halaman login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_blue"
+    android:focusableInTouchMode="true"
     tools:context=".Login">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/welcomeLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="72dp"
+                android:src="@mipmap/ic_welcome_logo"
+                tools:ignore="ContentDescription" />
+
+            <EditText
+                android:id="@+id/editTextUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/welcomeLogo"
+                android:layout_marginLeft="26dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="26dp"
+                android:hint="@string/username"
+                android:inputType="text"
+                android:paddingBottom="20dp"
+                android:textColor="@color/background"
+                android:textColorHint="@color/background"
+                android:theme="@style/LoginEditText"
+                tools:ignore="Autofill" />
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextUsername"
+                android:layout_marginLeft="26dp"
+                android:layout_marginRight="26dp"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:paddingBottom="20dp"
+                android:textColor="@color/background"
+                android:textColorHint="@color/background"
+                android:theme="@style/LoginEditText"
+                tools:ignore="Autofill" />
+
+            <Button
+                android:id="@+id/btnLogin"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextPassword"
+                android:layout_marginLeft="26dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="26dp"
+                android:background="@drawable/button_style"
+                android:text="@string/login"
+                android:textColor="@color/background" />
+
+            <TextView
+                android:id="@+id/or"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/btnLogin"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="16dp"
+                android:text="@string/or"
+                android:textColor="@color/background" />
+
+            <Button
+                android:id="@+id/btnFacebook"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/or"
+                android:layout_marginLeft="26dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="26dp"
+                android:background="@drawable/button_style"
+                android:drawableStart="@mipmap/ic_welcome_fb_login"
+                android:drawableLeft="@mipmap/ic_welcome_fb_login"
+                android:paddingLeft="48dp"
+                android:paddingRight="48dp"
+                android:text="@string/facebook"
+                android:textColor="@color/background" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnFacebook"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="24dp">
+
+                <TextView
+                    android:id="@+id/account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/account"
+                    android:textColor="@color/background" />
+
+                <TextView
+                    android:id="@+id/register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:text="@string/register"
+                    android:textAllCaps="false"
+                    android:textColor="@color/background"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
