--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -121,7 +121,8 @@
                     android:text="@string/register"
                     android:textAllCaps="false"
                     android:textColor="@color/background"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginBottom="24dp"/>
             </LinearLayout>
         </RelativeLayout>
 
