Membuat layout halaman almost there

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,8 +109,11 @@
                     android:id="@+id/account"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_light"
                     android:text="@string/account"
-                    android:textColor="@color/background" />
+                    android:textColor="@color/background"
+                    android:textSize="14sp"
+                    tools:targetApi="jelly_bean" />
 
                 <TextView
                     android:id="@+id/register"
@@ -118,11 +121,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
+                    android:layout_marginBottom="24dp"
                     android:text="@string/register"
                     android:textAllCaps="false"
                     android:textColor="@color/background"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="24dp"/>
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
 
