--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,32 +10,25 @@
         android:id="@+id/scroll_register"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         tools:ignore="UselessParent">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/head"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:src="@mipmap/ic_header"
-                    tools:ignore="ContentDescription" />
+                android:layout_height="wrap_content"
+                android:background="@mipmap/ic_header"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginEnd="24dp"
@@ -47,15 +40,13 @@
                     android:id="@+id/text_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_toEndOf="@id/back"
-                    android:layout_toRightOf="@id/back"
+                    android:layout_gravity="center"
                     android:text="@string/register"
                     android:textColor="@color/background"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <View
                 android:id="@+id/separator"
@@ -244,7 +235,6 @@
                 android:theme="@style/RegisterEditText"
                 tools:ignore="Autofill" />
 
-
             <LinearLayout
                 android:id="@+id/role"
                 android:layout_width="match_parent"
@@ -305,7 +295,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
 
             <EditText
                 android:id="@+id/editTextJob"
@@ -392,6 +381,7 @@
                 android:background="@drawable/button_register"
                 android:text="@string/register"
                 android:textColor="@color/light_blue_2" />
+
         </RelativeLayout>
 
     </ScrollView>
